third_party/rust/pin-project/tests/ui/pinned_drop/conditional-drop-impl.stderr
error[E0367]: `Drop` impl requires `T: Unpin` but the struct it is implemented for does not
  --> tests/ui/pinned_drop/conditional-drop-impl.rs:11:9
   |
11 | impl<T: Unpin> Drop for DropImpl<T> {
   |         ^^^^^
   |
note: the implementor must specify the same requirement
  --> tests/ui/pinned_drop/conditional-drop-impl.rs:7:1
   |
7  | struct DropImpl<T> {
   | ^^^^^^^^^^^^^^^^^^

error[E0277]: `T` cannot be unpinned
  --> tests/ui/pinned_drop/conditional-drop-impl.rs:16:15
   |
16 | #[pin_project(PinnedDrop)] //~ ERROR E0277
   |               ^^^^^^^^^^ the trait `Unpin` is not implemented for `T`
   |
   = note: consider using the `pin!` macro
           consider using `Box::pin` if you need to access the pinned value outside of the current scope
note: required for `PinnedDropImpl<T>` to implement `PinnedDrop`
  --> tests/ui/pinned_drop/conditional-drop-impl.rs:23:16
   |
23 | impl<T: Unpin> PinnedDrop for PinnedDropImpl<T> {
   |         -----  ^^^^^^^^^^     ^^^^^^^^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here
help: consider restricting type parameter `T`
   |
17 | struct PinnedDropImpl<T: std::marker::Unpin> {
   |                        ++++++++++++++++++++
